--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
         run: pnpm run lint
 
       - name: Format check
-        run: pnpm run format:check
+        run: pnpm run format
 
       - name: Build
         run: pnpm run build
