Refactor code formatting and improve type inference in LSP SDK

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -4,7 +4,12 @@
     "composite": true,
     "outDir": "./dist",
     "rootDir": "./src",
-    "declarationMap": true
+    "declarationMap": true,
+    "verbatimModuleSyntax": false,
+    "isolatedModules": false,
+    "noUncheckedSideEffectImports": false,
+    "strict": false,
+    "strictNullChecks": true
   },
   "include": ["src/**/*"],
   "exclude": ["dist", "node_modules", "**/*.test.ts", "**/*.spec.ts"]
