--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -41,10 +41,10 @@
     "README.md"
   ],
   "scripts": {
-    "build": "tsgo --build",
+    "build": "tsc --build",
     "clean": "rm -rf dist *.tsbuildinfo",
-    "dev": "tsgo --build --watch",
-    "type-check": "tsgo --noEmit"
+    "dev": "tsc --build --watch",
+    "type-check": "tsc --noEmit"
   },
   "peerDependencies": {
     "zod": "^3.25.0"
