--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -6,10 +6,7 @@
     "rootDir": "./src",
     "declarationMap": true,
     "verbatimModuleSyntax": false,
-    "isolatedModules": false,
-    "noUncheckedSideEffectImports": false,
-    "strict": false,
-    "strictNullChecks": true
+    "isolatedModules": false
   },
   "include": ["src/**/*"],
   "exclude": ["dist", "node_modules", "**/*.test.ts", "**/*.spec.ts"]
