feat: add GitHub Actions workflows for testing and type checking
- Created a test workflow to run unit tests and upload coverage to Codecov.
- Added a type check workflow to validate TypeScript types on push and pull requests.

test: implement LSP 3.17 conformance test suite

- Added comprehensive tests for LSP compliance, covering message types, error codes, and protocol lifecycle.

test: create benchmarks for cancellation and message parsing

- Developed benchmark suites for cancellation propagation and JSON-RPC message parsing to ensure performance targets are met.

fix: improve error handling and type definitions in examples

- Updated example files to enhance error handling and type safety, ensuring better compliance with TypeScript standards.

chore: update package.json scripts for testing

- Added scripts for running end-to-end and unit tests using Vitest.

refactor: clean up unused imports and improve code readability

- Removed unnecessary imports and improved code structure across various files for better maintainability.

--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui",
+    "test:e2e": "vitest run e2e",
+    "test:unit": "vitest run packages",
     "lint": "oxlint .",
     "lint:fix": "oxlint --fix .",
     "format": "oxfmt .",
