--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "changeset": "changeset",
     "changeset:version": "changeset version",
     "changeset:publish": "pnpm run build && changeset publish",
+    "generate:protocol": "tsx scripts/generate-protocol-types.ts",
     "prepare": "simple-git-hooks"
   },
   "devDependencies": {
@@ -59,11 +60,14 @@
     "@typescript/native-preview": "7.0.0-dev.20260129.1",
     "@vitest/coverage-v8": "^4.0.18",
     "@vitest/ui": "^4.0.18",
+    "camelcase": "^8.0.0",
     "lint-staged": "^16.2.7",
     "oxfmt": "^0.27.0",
     "oxlint": "^1.42.0",
     "simple-git-hooks": "^2.13.1",
     "size-limit": "^12.0.0",
+    "ts-morph": "^26.0.0",
+    "tsx": "^4.19.2",
     "type-fest": "^5.4.2",
     "typescript": "^5.9.3",
     "vite": "^7.3.1",
