--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lspy",
+  "name": "lspeasy",
   "version": "1.0.0",
   "private": true,
   "description": "TypeScript SDK for building Language Server Protocol clients and servers",
@@ -12,15 +12,15 @@
     "lsp-client",
     "lsp-server"
   ],
-  "homepage": "https://github.com/pradeepmouli/lspy#readme",
+  "homepage": "https://github.com/pradeepmouli/lspeasy#readme",
   "bugs": {
-    "url": "https://github.com/pradeepmouli/lspy/issues"
+    "url": "https://github.com/pradeepmouli/lspeasy/issues"
   },
   "license": "MIT",
   "author": "Pradeep Mouli",
   "repository": {
     "type": "git",
-    "url": "https://github.com/pradeepmouli/lspy.git"
+    "url": "https://github.com/pradeepmouli/lspeasy.git"
   },
   "workspaces": [
     "packages/*"
