--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -33,10 +33,10 @@
     "README.md"
   ],
   "scripts": {
-    "build": "tsc --build",
+    "build": "tsgo --build",
     "clean": "rm -rf dist *.tsbuildinfo",
-    "dev": "tsc --build --watch",
-    "type-check": "tsc --noEmit"
+    "dev": "tsgo --build --watch",
+    "type-check": "tsgo --noEmit"
   },
   "dependencies": {
     "@lspeasy/core": "workspace:*"
