--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -37,6 +37,10 @@
       "types": "./dist/protocol/index.d.ts",
       "import": "./dist/protocol/index.js"
     },
+    "./protocol/enums": {
+      "types": "./dist/protocol/enums.d.ts",
+      "import": "./dist/protocol/enums.js"
+    },
     "./transport": {
       "types": "./dist/transport/index.d.ts",
       "import": "./dist/transport/index.js"
