--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "changeset": "changeset",
     "changeset:version": "changeset version",
     "changeset:publish": "pnpm run build && changeset publish",
-    "generate:protocol": "tsx scripts/generate-protocol-types.ts",
+    "generate:protocol": "tsx scripts/generate-protocol-types.ts && oxfmt packages/core/src/protocol/*.ts",
     "prepare": "simple-git-hooks"
   },
   "devDependencies": {
