Update format check step in CI to use 'format:check' and continue on error

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,8 +39,8 @@ jobs:
         run: pnpm run lint
 
       - name: Format check
-        run: pnpm run format
-
+        run: pnpm run format:check
+        continue-on-error: true
       - name: Test
         run: pnpm run test
 
