feat: add connection health monitoring and document change helper contracts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,5 +27,5 @@
     "incremental": true
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist", "build", "coverage"]
+  "exclude": ["node_modules", "dist", "build", "coverage", "specs/**/*"]
 }
