refactor(middleware,client,core): relocate pino package and prevent unhandled rejections

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "url": "https://github.com/pradeepmouli/lspeasy.git"
   },
   "workspaces": [
-    "packages/*"
+    "packages/*",
+    "packages/*/*"
   ],
   "type": "module",
   "scripts": {
