--- a/packages/middleware/pino/package.json
+++ b/packages/middleware/pino/package.json
@@ -1,8 +1,14 @@
 {
   "name": "@lspeasy/middleware-pino",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Pino-based structured logging middleware for lspeasy",
-  "keywords": ["lsp", "language-server-protocol", "middleware", "pino", "logging"],
+  "keywords": [
+    "lsp",
+    "language-server-protocol",
+    "middleware",
+    "pino",
+    "logging"
+  ],
   "license": "MIT",
   "author": "Pradeep Mouli",
   "repository": {
@@ -19,7 +25,10 @@
   },
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
-  "files": ["dist", "README.md"],
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "scripts": {
     "build": "tsgo --build",
     "clean": "rm -rf dist *.tsbuildinfo",
@@ -27,7 +36,7 @@
     "type-check": "tsgo --noEmit"
   },
   "peerDependencies": {
-    "@lspeasy/core": "workspace:*",
+    "@lspeasy/core": "workspace:^",
     "pino": "^9.0.0"
   },
   "devDependencies": {
