chore(release): set scoped package publish access to public

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -57,6 +57,9 @@
     "dist",
     "README.md"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "build": "tsgo --build",
     "clean": "rm -rf dist *.tsbuildinfo",
