--- a/packages/middleware/pino/package.json
+++ b/packages/middleware/pino/package.json
@@ -29,6 +29,9 @@
     "dist",
     "README.md"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "build": "tsgo --build",
     "clean": "rm -rf dist *.tsbuildinfo",
