--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -96,7 +96,12 @@ jobs:
           if [ "$CHANGESET_COUNT" -gt 0 ]; then
             echo "Found $CHANGESET_COUNT changesets, proceeding with publishing..."
             
-            # Version packages
+            # Check status BEFORE versioning to know what will be published
+            pnpm changeset status --output .changeset/status.json
+            PACKAGES_TO_PUBLISH=$(node -e "const s=require('./.changeset/status.json'); console.log((s.releases||[]).map(r=>r.name).join(' '));")
+            echo "Packages to publish: $PACKAGES_TO_PUBLISH"
+            
+            # Version packages (consumes changesets)
             pnpm changeset:version
             
             # Commit version changes
@@ -104,17 +109,16 @@ jobs:
             git commit -m "chore: version packages" || echo "No version changes to commit"
             git push origin master
             
-            # Determine packages to publish and use npm directly (avoid pnpm publish)
-            pnpm changeset status --output .changeset/status.json
-            RELEASES=$(node -e "const s=require('./.changeset/status.json'); console.log((s.releases||[]).map(r=>r.name).join(' '));")
-            if [ -n "$RELEASES" ]; then
+            # Publish the packages we identified earlier
+            if [ -n "$PACKAGES_TO_PUBLISH" ]; then
+              echo "Publishing packages: $PACKAGES_TO_PUBLISH"
               FILTER_ARGS=""
-              for name in $RELEASES; do
+              for name in $PACKAGES_TO_PUBLISH; do
                 FILTER_ARGS="$FILTER_ARGS --filter $name"
               done
               pnpm -r $FILTER_ARGS exec npm publish --provenance --access public
             else
-              echo "No packages to publish after versioning"
+              echo "No packages to publish"
             fi
           else
             echo "No changesets found, skipping publication"
