--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,8 +64,14 @@ jobs:
 
       - name: Configure npm for publishing
         run: |
-          # Delete _authToken to force OIDC
-          npm config delete //registry.npmjs.org/:_authToken 2>/dev/null || true
+          if [ -n "${{ secrets.NPM_TOKEN }}" ]; then
+            echo "Using NPM_TOKEN for authentication"
+            npm config set //registry.npmjs.org/:_authToken ${{ secrets.NPM_TOKEN }}
+          else
+            echo "Using OIDC for authentication"
+            # Delete _authToken to force OIDC
+            npm config delete //registry.npmjs.org/:_authToken 2>/dev/null || true
+          fi
           echo "NPM configuration:"
           npm config list
 
@@ -125,4 +131,5 @@ jobs:
           fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
           NPM_CONFIG_PROVENANCE: true
