--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -71,13 +71,15 @@
     "type-check": "tsgo --noEmit"
   },
   "peerDependencies": {
-    "ws": "^8.19.0",
-    "zod": "^3.25.0"
+    "ws": "^8.19.0"
   },
   "peerDependenciesMeta": {
     "ws": {
       "optional": true
     }
+  },
+  "optionalDependencies": {
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/ws": "^8.18.1",
