--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -2,6 +2,7 @@
   "name": "@lspeasy/client",
   "version": "3.0.0",
   "description": "Connect to LSP servers with typed client API",
+  "private": false,
   "keywords": [
     "lsp",
     "language-server-protocol",
