--- a/packages/middleware/pino/package.json
+++ b/packages/middleware/pino/package.json
@@ -2,6 +2,7 @@
   "name": "@lspeasy/middleware-pino",
   "version": "4.0.0",
   "description": "Pino-based structured logging middleware for lspeasy",
+  "private": false,
   "keywords": [
     "lsp",
     "language-server-protocol",
