--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,6 +2,7 @@
   "name": "@lspeasy/server",
   "version": "4.0.0",
   "description": "Build LSP servers with simple, typed API",
+  "private": false,
   "keywords": [
     "lsp",
     "language-server-protocol",
